@@ -1,3 +1,15 @@
+2006-02-10  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by darin.
+
+        <rdar://problem/4145813> hang in XMLHttpRequest::cancelRequests
+        No test case possible.
+
+        * khtml/ecma/xmlhttprequest.cpp:
+        (KJS::removeFromRequestsByDocument):
+        (KJS::XMLHttpRequest::removeFromRequestsByDocument):
+        (KJS::XMLHttpRequest::cancelRequests):
+
 2006-02-10  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Tim O.
